configurações do ferramental do desenvolvimento

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,17 @@ mkdocstrings-python = "^0.8.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = "--doctest-modules"
+
+[tool.isort]
+profile = "black"
+line_length = 79
+
+[tool.taskipy.tasks]
+lint = "blue --check --diff . && isort --check --diff ."  # check code style
+docs = "mkdocs serve"  # run docs locally
+test = "pytest -s -x --cov=notas_musicais -vv"  # run tests
+post_test = "covererage html"  # generate coverage report
