--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "notas_musicais"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+typer = "^0.7.0"
+rich = "^13.3.2"
+blue = "^0.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
