--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Joao Carlos <joao.carlos.dev.log@gmail.com>"]
 readme = "README.md"
 packages = [{include = "notas_musicais"}]
 
+[tool.poetry.scripts]
+escalas = "notas_musicais.cli:app"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 typer = "^0.7.0"
